--- a/index.html
+++ b/index.html
@@ -1,277 +1,200 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Portfolio — Diseño C</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Kevin Anthony Naveros Ayquipa | Portfolio</title>
 
-  <style>
-    :root{
-      --bg:#0b1020;
-      --panel:#0f172a;
-      --panel2:rgba(15,23,42,.7);
-      --text:#e5e7eb;
-      --muted:#94a3b8;
-      --line:rgba(148,163,184,.18);
-      --accent:#60a5fa;
-      --shadow:0 18px 50px rgba(0,0,0,.35);
-      --r:18px;
-      --max:1100px;
-    }
-    *{box-sizing:border-box}
-    html{scroll-behavior:smooth}
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      color:var(--text);
-      background:
-        radial-gradient(900px 600px at 15% 10%, rgba(96,165,250,.18), transparent 60%),
-        radial-gradient(900px 600px at 85% 20%, rgba(52,211,153,.12), transparent 55%),
-        var(--bg);
-      line-height:1.6;
-    }
-    a{color:inherit;text-decoration:none}
-
-    /* NAV */
-    header{
-      position:sticky; top:0; z-index:40;
-      backdrop-filter: blur(10px);
-      background: rgba(2,6,23,.55);
-      border-bottom:1px solid var(--line);
-    }
-    .nav{
-      max-width:var(--max); margin:auto;
-      padding:12px 18px;
-      display:flex; align-items:center; justify-content:space-between; gap:14px;
-    }
-    .brand{font-weight:800; letter-spacing:.3px}
-    .menu{display:flex; gap:10px; flex-wrap:wrap}
-    .menu a{
-      font-size:13px; color:var(--muted);
-      padding:8px 10px; border-radius:999px; border:1px solid transparent;
-    }
-    .menu a.active, .menu a:hover{
-      color:var(--text); border-color:var(--line);
-      background:rgba(96,165,250,.08);
-    }
-
-    /* LAYOUT */
-    .wrap{max-width:var(--max); margin:auto; padding:28px 18px 60px}
-    section{
-      margin-top:70px;
-      opacity:0; transform:translateY(24px);
-      transition:opacity .7s ease, transform .7s ease;
-    }
-    section.visible{opacity:1; transform:none}
-
-    .card{
-      background:var(--panel2);
-      border:1px solid var(--line);
-      border-radius:var(--r);
-      box-shadow:var(--shadow);
-      padding:22px;
-    }
-    h1{margin:0; font-size:42px; letter-spacing:-.02em}
-    h2{margin:0 0 10px; font-size:13px; letter-spacing:.12em; text-transform:uppercase; color:var(--muted)}
-    p{margin:0; color:var(--muted)}
-
-    /* HERO */
-    .hero{
-      display:grid; grid-template-columns:1.2fr .8fr; gap:18px;
-    }
-    .pills{display:flex; gap:10px; flex-wrap:wrap; margin-top:14px}
-    .pill{
-      border:1px solid var(--line);
-      background:rgba(2,6,23,.25);
-      padding:7px 10px; border-radius:999px; font-size:13px;
-    }
-
-    /* ACCORDION */
-    .acc{
-      margin-top:10px;
-      border:1px solid var(--line);
-      border-radius:14px;
-      overflow:hidden;
-      background:rgba(2,6,23,.22);
-    }
-    .acc button{
-      width:100%; text-align:left;
-      background:none; border:none; color:var(--text);
-      padding:14px 16px;
-      display:flex; align-items:center; justify-content:space-between;
-      cursor:pointer; font-size:14px; font-weight:700;
-      border-top:1px solid var(--line);
-    }
-    .acc button:first-child{border-top:none}
-    .acc button span{color:var(--muted); font-weight:400}
-    .acc .panel{
-      max-height:0; overflow:hidden;
-      transition:max-height .35s ease;
-      border-top:1px solid var(--line);
-      background:rgba(15,23,42,.55);
-    }
-    .acc .panel .inner{padding:14px 16px; color:var(--muted)}
-    .acc button.active + .panel{max-height:240px}
-
-    /* GRID */
-    .grid{display:grid; grid-template-columns:1fr 1fr; gap:18px}
-
-    /* PROJECT CARDS */
-    .projects{
-      display:grid; grid-template-columns:repeat(3,1fr); gap:14px;
-    }
-    .proj{
-      border:1px solid var(--line); border-radius:16px;
-      background:rgba(2,6,23,.18); padding:14px;
-      transition:transform .15s ease, border-color .15s ease;
-      min-height:140px;
-    }
-    .proj:hover{transform:translateY(-2px); border-color:rgba(96,165,250,.5)}
-    .proj b{display:block; margin-bottom:6px}
-    .proj p{font-size:13px}
-
-    footer{margin-top:40px; text-align:center; color:var(--muted); font-size:13px}
-
-    @media(max-width:900px){
-      .hero{grid-template-columns:1fr}
-      .grid{grid-template-columns:1fr}
-      .projects{grid-template-columns:1fr}
-      h1{font-size:34px}
-    }
-  </style>
+<style>
+:root{
+--bg:#0b1020;--panel:#0f172a;--panel2:rgba(15,23,42,.7);
+--text:#e5e7eb;--muted:#94a3b8;--line:rgba(148,163,184,.18);
+--accent:#60a5fa;--r:18px;--max:1100px}
+*{box-sizing:border-box}
+html{scroll-behavior:smooth}
+body{
+margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto;
+background:var(--bg);color:var(--text);line-height:1.6}
+header{
+position:sticky;top:0;z-index:50;
+background:#020617cc;border-bottom:1px solid var(--line);
+backdrop-filter:blur(10px)}
+.nav{
+max-width:var(--max);margin:auto;
+display:flex;justify-content:space-between;
+padding:14px 18px}
+.menu a{
+margin-left:12px;color:var(--muted);
+text-decoration:none;font-size:13px}
+.menu a.active{color:#fff}
+.wrap{max-width:var(--max);margin:auto;padding:40px 18px}
+section{margin-top:70px}
+.card{
+background:var(--panel2);border:1px solid var(--line);
+border-radius:var(--r);padding:24px}
+h1{font-size:42px;margin:0}
+h2{font-size:13px;text-transform:uppercase;color:var(--muted)}
+.acc button{
+width:100%;background:none;border:none;
+color:#fff;padding:14px 0;text-align:left;
+border-top:1px solid var(--line);
+font-weight:600;cursor:pointer}
+.acc button:first-child{border-top:none}
+.acc .panel{display:none;padding:10px 0;color:var(--muted)}
+.acc button.active + .panel{display:block}
+ul{margin:8px 0 0 18px}
+footer{text-align:center;color:var(--muted);margin-top:40px;font-size:13px}
+</style>
 </head>
 
 <body>
 
 <header>
-  <div class="nav">
-    <div class="brand">PORTFOLIO</div>
-    <nav class="menu">
-      <a href="#home" class="active">Home</a>
-      <a href="#about">About</a>
-      <a href="#resume">Resume</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </div>
+<div class="nav">
+<strong>Kevin Naveros</strong>
+<nav class="menu">
+<a href="#home" class="active">Home</a>
+<a href="#about">About</a>
+<a href="#experience">Experience</a>
+<a href="#education">Education</a>
+<a href="#certs">Certifications</a>
+<a href="#contact">Contact</a>
+</nav>
+</div>
 </header>
 
 <main class="wrap">
 
-  <!-- HOME -->
-  <section id="home" class="visible">
-    <div class="card hero">
-      <div>
-        <h1>Nombre Apellido</h1>
-        <p style="margin-top:10px">Mensaje de impacto breve. Rol y enfoque.</p>
-        <div class="pills">
-          <span class="pill">Área</span>
-          <span class="pill">Especialidad</span>
-          <span class="pill">Ubicación</span>
-        </div>
-      </div>
-      <div class="card">Bloque visual / foto</div>
-    </div>
-  </section>
+<section id="home">
+<div class="card">
+<h1>Kevin Anthony Naveros Ayquipa</h1>
+<p>Economist | Data & Financial Analytics | Corporate & Retail Experience</p>
+</div>
+</section>
 
-  <!-- ABOUT (accordion) -->
-  <section id="about">
-    <div class="card">
-      <h2>About</h2>
-      <div class="acc">
-        <button class="active">Perfil <span>Resumen</span></button>
-        <div class="panel"><div class="inner">Contenido plegable.</div></div>
+<section id="about">
+<div class="card">
+<h2>About</h2>
+<div class="acc">
+<button class="active">Professional Profile</button>
+<div class="panel">
+Economics student at the Pontificia Universidad Católica del Perú (8th semester), with an analytical,
+organized and results-oriented profile. Experience in functional analysis, financial analysis,
+corporate finance, retail operations, sales, customer service, and process optimization.
+Strong command of Excel, Power BI, SQL, SAP and Python, with a focus on data-driven decision-making.
+</div>
 
-        <button>Logros <span>Highlights</span></button>
-        <div class="panel"><div class="inner">Contenido plegable.</div></div>
+<button>Key Achievement</button>
+<div class="panel">
+Full scholarship recipient for the PUCP Summer School 2026 (Q-LAB & Fin-LAB), a highly competitive
+program in Data Science applied to Macro-Finance, including training in Python for finance,
+Machine Learning, Deep Learning for time series, financial NLP, and Asset Pricing.
+</div>
+</div>
+</div>
+</section>
 
-        <button>Intereses <span>Focus</span></button>
-        <div class="panel"><div class="inner">Contenido plegable.</div></div>
-      </div>
-    </div>
-  </section>
+<section id="experience">
+<div class="card">
+<h2>Professional Experience</h2>
+<div class="acc">
 
-  <!-- RESUME -->
-  <section id="resume">
-    <div class="grid">
-      <div class="card">
-        <h2>Experience</h2>
-        <div class="acc">
-          <button class="active">Rol 1 <span>Empresa</span></button>
-          <div class="panel"><div class="inner">Detalles.</div></div>
-          <button>Rol 2 <span>Empresa</span></button>
-          <div class="panel"><div class="inner">Detalles.</div></div>
-        </div>
-      </div>
-      <div class="card">
-        <h2>Skills</h2>
-        <div class="acc">
-          <button class="active">Herramientas</button>
-          <div class="panel"><div class="inner">Excel · SQL · BI</div></div>
-          <button>Idiomas</button>
-          <div class="panel"><div class="inner">Nivel</div></div>
-        </div>
-      </div>
-    </div>
-  </section>
+<button class="active">Adidas Group — Internship Program (Retail & Commercial Area)</button>
+<div class="panel">
+<ul>
+<li>Participation in the Internship Program in the Retail and Commercial Area.</li>
+<li>Sales performance analysis and monitoring of commercial KPIs.</li>
+<li>Customer service with a focus on personalized shopping experience and customer loyalty.</li>
+<li>Support in point-of-sale operations: cash register, invoicing, and returns.</li>
+<li>Inventory control, stock replenishment, and shortage reporting.</li>
+<li>Support in commercial campaigns, launches, and promotions.</li>
+<li>Coordination with the sales team to achieve individual and group targets.</li>
+<li>Registration and organization of operational information for internal reports.</li>
+<li><strong>Tools:</strong> SAP, Microsoft Excel.</li>
+</ul>
+</div>
 
-  <!-- PROJECTS -->
-  <section id="projects">
-    <div class="card">
-      <h2>Projects</h2>
-      <div class="projects">
-        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
-        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
-        <div class="proj"><b>Proyecto</b><p>Descripción corta.</p></div>
-      </div>
-    </div>
-  </section>
+<button>Danysoft E.I.R.L — Junior Functional Analyst</button>
+<div class="panel">
+<ul>
+<li>Issuance of invoices, credit notes, and customer payments.</li>
+<li>Preparation of functional documentation.</li>
+<li>Requirements gathering with end users.</li>
+<li>Process analysis and continuous improvement.</li>
+<li>Automation and analysis using Excel, Power BI, and SQL.</li>
+</ul>
+</div>
 
-  <!-- CONTACT -->
-  <section id="contact">
-    <div class="card">
-      <h2>Contact</h2>
-      <p>Email / Links</p>
-    </div>
-  </section>
+<button>Marathon Sports — Sales & Operations Advisor</button>
+<div class="panel">
+<ul>
+<li>Cash handling and payment system operations.</li>
+<li>Product promotion and sales.</li>
+<li>Inventory management and stock replenishment.</li>
+<li>Visual merchandising following brand standards.</li>
+</ul>
+</div>
 
-  <footer>© <span id="y"></span> Portfolio</footer>
+<button>Grupo Pionier — Sales & Operations</button>
+<div class="panel">
+<ul>
+<li>Customer advisory and sales support.</li>
+<li>Organization and inventory control.</li>
+</ul>
+</div>
+
+<button>Inversiones Rubin’s S.A.C — Warehouse Operator</button>
+<div class="panel">
+<ul>
+<li>Physical inventory counts.</li>
+<li>Classification, order preparation, and packaging.</li>
+</ul>
+</div>
+
+</div>
+</div>
+</section>
+
+<section id="education">
+<div class="card">
+<h2>Education</h2>
+<ul>
+<li><strong>Pontificia Universidad Católica del Perú</strong> — Economics (8th semester)</li>
+<li><strong>IDAT</strong> — Excel Specialist</li>
+</ul>
+</div>
+</section>
+
+<section id="certs">
+<div class="card">
+<h2>Certifications</h2>
+<ul>
+<li>Excel Specialist — IDAT (72 academic hours)</li>
+<li>Introduction to SQL — DataCamp (2026)</li>
+<li>Financial & Banking Econometrics — CIIP (50 hours)</li>
+<li>Statistics for Data Science — CIIP (50 hours)</li>
+</ul>
+</div>
+</section>
+
+<section id="contact">
+<div class="card">
+<h2>Contact</h2>
+<p>Email and references available upon request.</p>
+</div>
+</section>
+
+<footer>
+© <span id="y"></span> Kevin Anthony Naveros Ayquipa
+</footer>
+
 </main>
 
 <script>
-  // Año
-  document.getElementById("y").textContent = new Date().getFullYear();
-
-  // Reveal + nav activo
-  const sections = document.querySelectorAll("section");
-  const navLinks = document.querySelectorAll(".menu a");
-  const io = new IntersectionObserver(entries=>{
-    entries.forEach(e=>{
-      if(e.isIntersecting){
-        e.target.classList.add("visible");
-        navLinks.forEach(l=>l.classList.toggle(
-          "active",
-          l.getAttribute("href")==="#"+e.target.id
-        ));
-      }
-    });
-  },{threshold:.35});
-  sections.forEach(s=>io.observe(s));
-
-  // Accordion
-  document.querySelectorAll(".acc button").forEach(btn=>{
-    btn.addEventListener("click", ()=>{
-      const was = btn.classList.contains("active");
-      const parent = btn.parentElement;
-      parent.querySelectorAll("button").forEach(b=>b.classList.remove("active"));
-      parent.querySelectorAll(".panel").forEach(p=>p.style.maxHeight=null);
-      if(!was){
-        btn.classList.add("active");
-        const panel = btn.nextElementSibling;
-        panel.style.maxHeight = panel.scrollHeight+"px";
-      }
-    });
-  });
+document.getElementById("y").textContent=new Date().getFullYear();
+document.querySelectorAll(".acc button").forEach(b=>{
+b.onclick=()=>b.classList.toggle("active");
+});
 </script>
 
 </body>
